# Netatalk

./: .cvsignore  ChangeLog  NEWS  README  VERSION  acconfig.h  configure.in
config/: AppleVolumes.default  AppleVolumes.default.tmpl  AppleVolumes.system  Makefile.am  afpd.conf.tmpl  netatalk.conf
contrib/nu/: nu.in
contrib/patches/: patch.vfs
contrib/printing/: timeout.c
contrib/shell_utils/: Makefile.am  afpd-mtab.pl.in  apple_cp.in  apple_mv.in  apple_rm.in  asip-status.pl.in  cleanappledouble.pl.in  netatalkshorternamelinks.pl.in
contrib/timelord/: README  timelord.c
debian/: changelog  control  copyright  libnetatalk-dev.install  libnetatalk.docs  libnetatalk.install  libnetatalk.symbols  netatalk-config  netatalk-doc.install  netatalk-uams-extra.install  netatalk-uams-pam.install  netatalk-uams-standalone.install  netatalk.install  rules
debian/patches/: autoreconf.patch  correct-url-to-http-resources.patch  fix-manual-bdb-path-bug.patch  improved-systemd-units.patch  minor-documentation-fixes.patch  openssl-1.1.0.patch  remove-autotools-warnings.patch  remove-libevent-from-dist-subdirs.patch  remove-trailing-slash-UAMS-path.patch  series
debian/source/: include-binaries
distrib/initscripts/: Makefile.am  rc.atalk.debian.tmpl  rc.atalk.gentoo.tmpl  rc.atalk.suse.tmpl  rc.atalk.sysv  rc.atalk.sysv.tmpl
distrib/rpm/: buildrpm
doc/: DEVELOPER  FAQ  INSTALL  README.afp3
etc/afpd/: Makefile.am  acls.c  afp_asp.c  afp_config.c  afp_config.h  afp_dsi.c  afp_options.c  afp_util.c  afprun.c  afs.c  appl.c  auth.c  auth.h  catsearch.c  codepage.c  codepage.h  desktop.c  desktop.h  directory.c  directory.h  enumerate.c  file.c  file.h  filedir.c  filedir.h  fork.c  fork.h  gettok.c  globals.h  icon.h  main.c  mangle.c  mangle.h  messages.c  misc.h  nfsquota.c  ofork.c  parse_mtab.c  parse_mtab.h  passwd.c  (+13 more)
etc/atalkd/: aep.c  atserv.h  config.c  interface.h  main.c  main.h  multicast.c  nbp.c  route.c  rtmp.c  zip.c
etc/cnid_dbd/: Makefile.am  README  cnid_metad.c  comm.c  comm.h  db_param.c  db_param.h  dbd.h  dbd_add.c  dbd_dbcheck.c  dbd_delete.c  dbd_get.c  dbd_getstamp.c  dbd_lookup.c  dbd_resolve.c  dbd_update.c  dbif.c  dbif.h  main.c  pack.c  pack.h  usockfd.c  usockfd.h
etc/papd/: Makefile.am  auth.c  comment.c  file.c  file.h  headers.c  lp.c  lp.h  magics.c  main.c  ppd.c  ppd.h  print_cups.c  printcap.c  printcap.h  printer.h  queries.c  session.c  showppd.c  uam.c
etc/psf/: Makefile.am  psf.c
etc/uams/: Makefile.am  uams_dhx2_pam.c  uams_dhx2_passwd.c  uams_dhx_pam.c  uams_dhx_passwd.c  uams_gss.c  uams_guest.c  uams_pam.c  uams_passwd.c  uams_pgp.c  uams_randnum.c
include/atalk/: Makefile.am  adouble.h  afp.h  asp.h  atp.h  cnid.h  cnid_dbd_private.h  dsi.h  list.h  netddp.h  server_child.h  uam.h  unicode.h  util.h  volinfo.h
libatalk/: Makefile.am
libatalk/adouble/: ad_attr.c  ad_date.c  ad_flush.c  ad_lock.c  ad_mmap.c  ad_open.c  ad_private.h  ad_read.c  ad_sendfile.c  ad_size.c  ad_write.c
libatalk/asp/: asp_getsess.c
libatalk/atp/: atp_packet.c  atp_rresp.c  atp_rsel.c  atp_sreq.c  atp_sresp.c
libatalk/cnid/: cnid.c  cnid_add.c  cnid_close.c  cnid_delete.c  cnid_get.c  cnid_init.c  cnid_lookup.c  cnid_mangle_add.c  cnid_mangle_get.c  cnid_nextid.c  (+4 more)
macros/: Makefile.am  afs-check.m4  cnid-backend.m4  config-checks.m4  cups.m4  db3-check.m4  grep-check.m4  gssapi-check.m4  iconv.m4  pam-check.m4  perl-check.m4  ps-check.m4  quota-check.m4  snprintf-check.m4  srvloc.m4  ssl-check.m4  summary.m4  tcp-wrappers.m4  util.m4
(+157 files in other folders)
